--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,21 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    // compile("org.springframework.boot:spring-boot-starter-web")
+    // testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.springframework.boot:spring-boot-starter-hateoas")
+    compile("io.springfox:springfox-swagger2:2.9.2")
+    compile("io.springfox:springfox-swagger-ui:2.9.2")
+    compile("io.springfox:springfox-bean-validators:2.9.2")
+    compile("org.projectlombok:lombok")
+
+    testCompile("com.jayway.jsonpath:json-path")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    // compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '0.25.1.RELEASE'
+	// compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	// compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	// compile group: 'org.springframework.data', name: 'spring-data-rest-hal-browser', version: '3.1.9.RELEASE'
+	// compile group: 'org.projectlombok', name: 'lombok', version: '0.11.0'
+	// testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
