--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.7.RELEASE")
     }
 }
 
@@ -20,6 +20,7 @@ bootJar {
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/libs-release" }
 }
 
 sourceCompatibility = 1.8
@@ -28,14 +29,20 @@ targetCompatibility = 1.8
 dependencies {
     // compile("org.springframework.boot:spring-boot-starter-web")
     // testCompile('org.springframework.boot:spring-boot-starter-test')
-    compile("org.springframework.boot:spring-boot-starter-hateoas")
+    compile("org.springframework.boot:spring-boot-starter-hateoas") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
     compile("io.springfox:springfox-swagger2:2.9.2")
     compile("io.springfox:springfox-swagger-ui:2.9.2")
     compile("io.springfox:springfox-bean-validators:2.9.2")
+
+    compile("org.springframework.data:spring-data-gemfire")
     compile("org.projectlombok:lombok")
 
     testCompile("com.jayway.jsonpath:json-path")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.boot:spring-boot-starter-test") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
 
     // compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '0.25.1.RELEASE'
 	// compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
