--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/java,gradle
-# Edit at https://www.gitignore.io/?templates=java,gradle
+# Created by https://www.gitignore.io/api/java,maven,gradle
+# Edit at https://www.gitignore.io/?templates=java,maven,gradle
 
 ### Java ###
 # Compiled class file
@@ -27,6 +27,18 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
 ### Gradle ###
 .gradle
 build/
@@ -46,4 +58,4 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
-# End of https://www.gitignore.io/api/java,gradle
+# End of https://www.gitignore.io/api/java,maven,gradle
